test/error/iocheck/err8.rzy
// Error: transition guard is not allowed to write state

component
  Err8
    slot event();
    
  implementation hfsm(A)
    
    var
      a : R{0,100} = 0;
    
    function foo():Boolean
      a := 42;
      return a > 10;
    end
    
    state A end
    state B end
    
    transition A to B by event() if foo();
    
  end

